ipsvd 1.0.0
Sun, 15 Jun 2008 17:45:26 +0000

ipsvd 0.14.0
Sat, 19 Jan 2008 00:17:20 +0000
  * uidgid.c, uidgid.h: support numerical uid, gids through :uid:gid...
    (taken from the runit package).
  * tcpsvd.c, udpsvd.c, sslio.c, ssl_io.c: support numerical uid, gids,
    and colon-separated list of groups through :uid:gid... with the -u,
    -U arguments (thx Nikola Vladov).
  * man/tcpsvd.8, man/udpsvd.8, man/sslsvd.8, man/sslio.8, man/ipsvd.7:
    adapt.

ipsvd 0.13.0
Sun, 26 Aug 2007 11:04:21 +0000
  * ipsvd_check.c, man/ipsvd-instruct.5: lines starting with # are
    comments, ignore them completely.
  * ssl_io.c, man/sslio.8: support env variable SSLIO_BAD_CERTIFICATE to
    optionally accept 'bad certificate's (thx Nikola Vladov).
  * ssl_io.c, man/sslio.8, man/sslsvd.8: support env variable
    SSL_HANDSHAKE_TIMEOUT to disconnect a client if the ssl handshake
    isn't completed within some number of seconds (thx Nikola Vladov);
    add ENVIRONMENT section to man/sslsvd.8.
  * Makefile: build with matrixssl-1-8-3-open.

ipsvd 0.12.1
Sat, 04 Feb 2006 19:14:23 +0000
  * Makefile: fix build failure with local matrixssl library (thx Charlie
    Brady).

ipsvd 0.12.0
Fri, 03 Feb 2006 20:26:27 +0000
  * ssl_io.c, ssl_io.h: new; split off most code from sslio.c.
  * sslio.c: main() function only, uses ssl_io() from ssl_io.
  * tcpsvd.c: be sslsvd using ssl_io() #ifdef SSLSVD.
  * sslsvd.c: new; #define SSLSVD, #include tcpsvd.c.
  * man/sslsvd.8: new; man page for sslsvd(8).
  * man/ipsvd-cdb.8, man/ipsvd-instruct.5, man/ipsvd.7, man/sslio.8,
    man/tcpsvd.8, man/udpsvd.8: add SEE ALSO sslsvd(8).
  * sslsvd.check, sslsvd.dist: selftest for sslsvd not yet implemented.
  * doc/index.html: mention sslsvd.

ipsvd 0.11.1
Tue, 18 Oct 2005 19:02:18 +0000
  * sslio.check: tweak sslio program check (fixes testing failure on
    Debian m68k)
  * ipsvd_log.c: minor
  * Makefile, doc/install.html: adapt to matrixssl-1-7-1-open.tar.gz.

ipsvd 0.11.0