@@ -2,7 +2,6 @@
 #include <unistd.h>
 #include "matrixSsl.h"
 #include "uidgid.h"
-#include "prot.h"
 #include "error.h"
 #include "strerr.h"
 #include "fd.h"
@@ -360,7 +359,7 @@ int ssl_io(unsigned int newsession, const char **prog) {
       if (setgroups(sslugid.gids, sslugid.gid) == -1)
         fatal("unable to set groups");
       if (setgid(*sslugid.gid) == -1) fatal("unable to set gid");
-      if (prot_uid(sslugid.uid) == -1) fatalm("unable to set uid");
+      if (setuid(sslugid.uid) == -1) fatalm("unable to set uid");
     }
     if (newsession) {
       if (matrixSslReadKeys(&keys, cert, key, 0, ca) < 0) {
@@ -390,7 +389,7 @@ int ssl_io(unsigned int newsession, const char **prog) {
     if (setgroups(ugid.gids, ugid.gid) == -1)
       fatal("unable to set groups for prog");
     if (setgid(*ugid.gid) == -1) fatal("unable to set gid for prog");
-    if (prot_uid(ugid.uid) == -1) fatalm("unable to set uid for prog");
+    if (setuid(ugid.uid) == -1) fatalm("unable to set uid for prog");
   }
   pathexec(prog);
   fatalm("unable to run prog");
